Refactor AAO local testing framework

--- a/docs/1.1-InstallationPrerequisites.md
+++ b/docs/1.1-InstallationPrerequisites.md
@@ -8,15 +8,17 @@ Please ensure you have the following installed, or configured, on your machine b
 * Typically you'll want to use [CRC](https://github.com/code-ready/crc/) for local development, though it's fine if you're running OpenShift another way.
 * You need to have [the operator-sdk binary](https://github.com/operator-framework/operator-sdk/releases) in your `$PATH` > v1.0.
 
-### 1.1.1 - IAM User and Secret
+### 1.1.1 - AWS Credentials and Secret
 
 The operator requires a secret named `aws-account-operator-credentials` in the `aws-account-operator` namespace, containing credentials to the AWS `Payer Account` you wish to create accounts in. The `Payer Account` is the root account in an organization and can create linked accounts and manage them.
 
-The secret should contain credentials for an IAM user in the `Payer Account` with the data fields `aws_access_key_id` and `aws_secret_access_key`.
+Credentials are obtained via temporary STS tokens using `rh-aws-saml-login` rather than permanent IAM user credentials. This provides enhanced security through short-lived credentials.
 
-The user should have the following IAM permissions:
+The secret should contain the data fields `aws_access_key_id`, `aws_secret_access_key`, and `aws_session_token` (for STS temporary credentials).
 
-Permissions to allow the user to assume the `OrganizationAccountAccessRole` role in any account created:
+The credentials should have the following IAM permissions:
+
+Permissions to allow assuming the `OrganizationAccountAccessRole` role in any account created:
 
 ```json
 {
@@ -30,7 +32,7 @@ Permissions to allow the user to assume the `OrganizationAccountAccessRole` role
 
 ```
 
-Permissions to allow the user to interact with the support center:
+Permissions to interact with the support center:
 
 ```json
 {
@@ -48,85 +50,140 @@ Permissions to allow the user to interact with the support center:
 
 ```
 
-Once the user has been configured, you can deploy the secret by exporting the access key and secret of osd-staging-1 to the env variables listed below, and then, running `make deploy-aws-account-operator-credentials`:
+#### Setting up credentials for local development
 
+Use the `update_aws_credentials.sh` script to obtain temporary credentials via `rh-aws-saml-login`:
+
+```bash
+./hack/scripts/update_aws_credentials.sh
 ```
-OPERATOR_ACCESS_KEY_ID
-OPERATOR_SECRET_ACCESS_KEY
+
+This script will:
+1. Authenticate to both `osd-staging-1` and `osd-staging-2` profiles via SAML
+2. Update your `~/.aws/credentials` file with temporary credentials including session tokens
+3. Create a backup of your credentials file
+
+Once credentials are updated, deploy the secret using:
+
+```bash
+./hack/scripts/set_operator_credentials.sh osd-staging-2
 ```
 
-Alternatively, if you have the credentials stored in your `~/.aws/credentials` file, you can use the script in `hack/scripts/set_operator_credentials.sh` to create the secret from that profile:
+Or use the make target:
 
-    .hack/scripts/set_operator_credentials.sh my-aws-profile
-
-**Note** the aws credentials file should be in the following format:
+```bash
+make deploy-aws-account-operator-credentials
 ```
-[osd-staging-1]
-aws_access_key_id = myaccesskeyid
-aws_secret_access_key = mysecretaccesskey
+
+**Note**: Temporary credentials expire after a few hours. If you encounter authentication errors, re-run `update_aws_credentials.sh`.
+
+**Note**: The aws credentials file will be in the following format after running the script:
+```
+[osd-staging-2]
+aws_access_key_id = ASIA...
+aws_secret_access_key = ...
+aws_session_token = ...
 ``` 
 
 ### 1.1.2 AWS Accounts
 
-**Note to Red Hat employees:** As you're working on the operator you should have two accounts dedicated for your use of this operator, under each of the osd-staging `Payer Account`s.  Work with your manager or functional team lead to figure out what these account numbers are and save them, you'll need them later.
+For local development, you need access to three AWS accounts:
 
-Once you have the two accounts assigned to you, you can access their consoles via [osdctl](https://github.com/openshift/osdctl/#aws-account-console-url-generate):
+1. **osd-staging-1 (Shared)**:
+   - Access via `rh-aws-saml-login` with profile `osd-staging-1`
+   - Contains the centrally-managed JumpRole
+   - Operator credentials come from this account
+   - **Same for all developers**
+
+2. **osd-staging-2 Payer Account (Shared)**:
+   - Access via `rh-aws-saml-login` with profile `osd-staging-2`
+   - This is the payer account that contains your assigned account
+   - **Same for all developers**
+
+3. **Your Assigned Account (Personal)**:
+   - A dedicated account assigned to you under the osd-staging-2 Payer Account
+   - You create an AccessRole in this account
+   - Work with your manager to get this account assigned
+   - Access via `rh-aws-saml-login` with your custom profile name
+
+Once you have your assigned account, you can access its console via [osdctl](https://github.com/openshift/osdctl/#aws-account-console-url-generate):
 ```
-osdctl account console -p $AWSPROFILE -i $ACCOUNT_ID
+osdctl account console -p <your-profile> -i <your-account-id>
 ```
 
 ### 1.1.3 STS Roles
 
-To run the operator tests for [STS](0.1-Glossary.md#sts) mode you will need to create two roles &mdash; one in each of the AWS accounts you have been assigned. We've provided [this script](../hack/scripts/aws/setup_aws_accounts.sh) to setup your accounts as needed, as this process can be quite involved when done manually. By the end of these steps your two AWS accounts will look as follows:
+To run the operator tests for [STS](0.1-Glossary.md#sts) mode you will need to create an AccessRole in your assigned osd-staging-2 account. The architecture has been simplified:
 
-- **Account 1 (Jump Host)**
-  - This Account will be your Jump Host
-  - It will have a newly created `Policy` to `Assume Role`
-  - It will have a newly created `Role` for its `Jump Role`
-    - The new `Policy` created, `Assume Role`, will be attached to this role
-    - The `Trust Relationship` for this role will be updated to trust the `Payer Account`
-- **Account 2 (Target)**
-  - This Account is the one we will gain access to via the `Access Role`
-  - It will have a new role
-    - The Trust Relationship for this role will be updated to trust Account 1 Jump Role ARN
- 
-The following diagram shows the Account relationship
+- **osd-staging-1 (Shared Jump Host)**
+  - Contains a centrally-managed `JumpRole`
+  - You do **not** need to create or manage this role
+  - The JumpRole has a trust relationship that allows SRE users to assume it via SAML authentication
+  - ARN: `arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole`
+
+- **osd-staging-2 (Your Assigned Account - Target)**
+  - You will create an `AccessRole` in this account
+  - The AccessRole will trust the JumpRole from osd-staging-1
+  - This allows the operator to assume into your account from the shared jump account
+
+#### Architecture Diagram
+
+The following diagram shows the updated Account relationship using the new shared account architecture:
 
 ![Account Relationship Diagram](images/jump-role-diagram.png)
 
+**Note**: The diagram source is available at [images/jump-role-diagram.dot](images/jump-role-diagram.dot) and can be regenerated using: `dot -Tpng -Gdpi=300 jump-role-diagram.dot -o jump-role-diagram.png`
 
-[Here](./1.2-ManualSTSSetup.md) are the manual steps to create the above, these go more into the _why_ of each step, but if you're more interested in just getting your account setup, use [this script](../hack/scripts/aws/setup_aws_accounts.sh):
+#### Setting up the AccessRole
+
+First, ensure you have a profile configured for your assigned account in `~/.aws/credentials`. You can use `rh-aws-saml-login` to authenticate:
+```bash
+rh-aws-saml-login <your-profile-name>
 ```
-./setup_aws_accounts.sh -a <Assigned AWS Account ID 1> -b <Assigned AWS Account ID 2> -u <username>
+
+Then run the setup script to create the AccessRole in your assigned account:
+```bash
+./hack/scripts/aws/setup_access_role.sh -a <Your Assigned Account ID> -p <your-profile-name>
 ```
+
+**Example:**
+```bash
+./hack/scripts/aws/setup_access_role.sh -a <YOUR_ACCOUNT_ID> -p my-staging-account
+```
+
 Upon completion of the script you should have output with the following:
 ```
-Your Accounts have been setup successfully!
-Place the following in your env variables for the AAO
-STS_ROLE_ARN=arn:aws:iam::<Assigned AWS Account ID 2>:role/AccessRole
-STS_JUMP_ARN=arn:aws:iam::<Assigned AWS Account ID 1>:role/JumpRole
-STS_JUMP_ROLE=arn:aws:iam::<Assigned AWS Account ID 1>:role/JumpRole
+Add the following to your .envrc file:
+
+export STS_ROLE_ARN=arn:aws:iam::<YOUR_ACCOUNT_ID>:role/AccessRole
+export STS_JUMP_ARN=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole
+export STS_JUMP_ROLE=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole
+export OSD_STAGING_2_AWS_ACCOUNT_ID=<YOUR_ACCOUNT_ID>
 ```
-Do as instructed and add the fields to your local `.envrc`
+Add these fields to your local `.envrc` file as instructed.
 
-- The `Jump Role` will be a simulation of the role that we use as a bastion of sorts. For the STS Architecture, we have an IAM user that assumes a specific role in a specific account, and then using that role they can assume role into the cluster's account in order to run operations as necessary.
-- The `Access Role` will be a simulation of a role on a customer's account that gives us access to initialize the regions and initialize a cluster.  On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources. Minimal permissions required for the role are provided below.
+- The `Jump Role` is a centrally-managed role in the shared osd-staging-1 account that acts as a bastion. For the STS Architecture, users authenticate via SAML (using `rh-aws-saml-login`), assume the Jump Role, and then use that role to assume into target accounts via the Access Role.
+- The `Access Role` simulates a role on a customer's account that gives us access to initialize regions and initialize a cluster. On external customer accounts this is assumed to be a very locked-down role with ONLY the necessary permissions needed to run the operator or install the cluster resources.
 
-An additional field that must be set in `.envrc` is the `OSD_STAGING_1_OU_BASE_ID`.
+#### Setting Organization Unit IDs
 
-You can find it by listing the parents of the `osd-staging-1` account (take the `id` field of the output):
+You need to set `OSD_STAGING_1_OU_ROOT_ID` and `OSD_STAGING_1_OU_BASE_ID` in your `.envrc` file. These refer to the organizational structure of the **shared** osd-staging-1 account, not your assigned account.
+
+**These values are the same for all developers** and should be provided by your team lead or in onboarding documentation.
+
+If you need to look them up yourself:
 
 ```shell
-aws organizations list-parents --child-id <Assigned AWS Account ID 1> --profile osd-staging-1
+# Get the root OU ID (starts with r-)
+aws organizations list-roots --profile osd-staging-1
+
+# Get the base OU ID (starts with ou-)
+aws organizations list-organizational-units-for-parent --parent-id <ROOT_OU_ID> --profile osd-staging-1
 ```
 
-However it is recommended to verify the `osd-staging-1` account using the script [verify-organization.sh](../hack/scripts/aws/verify-organization.sh):
+**Note**: You typically don't need to look these up - they're shared constants for the team. Ask your manager or check team documentation.
 
-```shell
-./verify-organization.sh <Assigned AWS Account ID 1>
-```
-
-It will output if the account is usable.
+You can verify your setup using the [verify-organization.sh](../hack/scripts/aws/verify-organization.sh) script if you have access to create test accounts in the organization.
 
 ### 1.1.3.4 STS Role Validation
 
@@ -167,14 +224,51 @@ Now we have all required Roles defined, set up your required environment variabl
 ```bash
 export AWS_PAGER= # This is set so that it doesn't page out to less and block integration testing
 export FORCE_DEV_MODE=local # This flags the operator for local development for some code paths
-export OSD_STAGING_1_AWS_ACCOUNT_ID= # Your assigned osd-staging-1 account ID
-export OSD_STAGING_2_AWS_ACCOUNT_ID= # Your assigned osd-staging-2 account ID
-export OSD_STAGING_1_OU_ROOT_ID= # Your assigned osd-staging-1 OU Root ID
-export OSD_STAGING_1_OU_BASE_ID= # Your assigned osd-staging-1 OU Base ID
-export STS_ROLE_ARN= # A role you create in your osd-staging-{1,2} account with minimal STS permissions
-export STS_JUMP_ARN= # A role you create to simulate the role that we use as a bastion.
+
+# Your personal assigned account (get from your manager)
+# This is NOT the osd-staging-2 payer account!
+# It's your assigned account UNDER that payer
+export OSD_STAGING_2_AWS_ACCOUNT_ID=<YOUR_ACCOUNT_ID>
+
+# Shared team constants (same for all developers - get from team documentation)
+export OSD_STAGING_1_OU_ROOT_ID=<OU_ROOT_ID>
+export OSD_STAGING_1_OU_BASE_ID=<OU_BASE_ID>
+
+# STS roles
+export STS_ROLE_ARN=arn:aws:iam::<YOUR_ACCOUNT_ID>:role/AccessRole
+export STS_JUMP_ARN=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole # Centrally-managed (same for everyone)
+export STS_JUMP_ROLE=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole # Same as STS_JUMP_ARN
+
+# Optional: For integration tests that create accounts in the organization
+export OSD_STAGING_1_AWS_ACCOUNT_ID=<SHARED_ACCOUNT_ID> # The shared osd-staging-1 account (same for everyone)
 ```
 
+**Note:**
+- `OSD_STAGING_2_AWS_ACCOUNT_ID` should be **your** assigned account, not the shared payer account!
+- `OSD_STAGING_1_AWS_ACCOUNT_ID` is optional and only needed if running certain integration tests
+
 **Tip:** You can use [direnv](https://direnv.net) and add the above block (with variables filled in) into a `.envrc` file (make sure `.envrc` is in your global git ignore as well). Upon entry to the `aws-account-operator` folder, the env vars inside the file will be loaded automatically, and unset when you leave the folder.
+
+### 1.1.6 Quick Start Summary
+
+The streamlined setup process:
+
+**Prerequisites & Information Gathering:**
+1. Install prerequisites (Go, aws-cli, CRC, operator-sdk, rh-aws-saml-login, python3)
+2. Get from your manager/team lead:
+   - Your assigned **account ID** (under osd-staging-2 payer account)
+   - Your **AWS profile name** for this account
+   - Shared **OU_ROOT_ID** and **OU_BASE_ID** (same for all developers)
+
+**Setup Steps:**
+3. Authenticate to your assigned account: `rh-aws-saml-login <your-profile-name>`
+4. Create AccessRole: `./hack/scripts/aws/setup_access_role.sh -a <YOUR_ACCOUNT_ID> -p <your-profile-name>`
+5. Set environment variables in `.envrc` (see section 1.1.5)
+6. Deploy operator credentials: `make deploy-aws-account-operator-credentials`
+7. Configure ConfigMap: `./hack/scripts/set_operator_configmap.sh -a <ACCOUNT_LIMIT> -v <VCPU_QUOTA> -r "<OU_ROOT_ID>" -o "<OU_BASE_ID>"`
+
+**What you need vs. what's shared:**
+- ✅ **Shared (same for all devs)**: osd-staging-1 account, JumpRole ARN, OU IDs
+- 🔑 **Personal**: Your assigned account ID, AWS profile name, AccessRole (created in step 4)
 
 Now that those steps have been completed you can return to the Installation [Workflow Section](1.0-Installation.md#12-Workflow).
