Revert "Merge pull request #918 from reedcort/SREP-2921"
This reverts commit aa6165b3731412e9eb273750754b1499c53880e3, reversing
changes made to 41ddc6ea1a3ae29e2cc31d030fa3435b78fb62b2.

--- a/docs/2.0-Development.md
+++ b/docs/2.0-Development.md
@@ -15,31 +15,21 @@ The latter is known to work in a real [OpenShift Dedicated](https://www.openshif
 
 **Note:** You can try to mix and match; it might work.
 
-Both local and cluster modes share predeployment steps. These can be done via `make predeploy`, which requires your AWS credentials.
-
-First update your AWS credentials using temporary STS tokens:
-```sh
-./hack/scripts/update_aws_credentials.sh
-```
-
-Then deploy the operator prerequisites. You must be logged into the cluster as an administrator, or otherwise have permissions to create namespaces and deploy CRDs. For Minishift or CRC:
+Both local and cluster modes share predeployment steps. These can be done via `make predeploy`, which requires your AWS access key credentials.
+You must be logged into the cluster as an administrator, or otherwise have permissions to create namespaces and deploy CRDs. For Minishift, this can be done:
 
 ```sh
-oc login -u kubeadmin
-make predeploy
+oc login -u system:admin
+OPERATOR_ACCESS_KEY_ID="YOUR_ACCESS_KEY_ID" OPERATOR_SECRET_ACCESS_KEY="YOUR_SECRET_ACCESS_KEY" make predeploy
 ```
 
 This does the following:
 - Ensures existence of the namespace in which the operator will run.
-- Installs the AWS credentials secret from your `~/.aws/credentials` file (osd-staging-2 profile).
+- Installs the [credentials described above](#12-requirements).
 - Installs the operator's [Custom Resource Definitions](deploy/crds).
 - Creates an initially zero-size [AccountPool CR](hack/files/aws.managed.openshift.io_v1alpha1_zero_size_accountpool.yaml).
 
-**Important**: Temporary credentials from `rh-aws-saml-login` expire after a few hours. If you encounter authentication errors:
-1. Re-run `./hack/scripts/update_aws_credentials.sh` to refresh credentials
-2. Re-deploy the credentials secret: `make deploy-aws-account-operator-credentials`
-
-Predeployment only needs to be done once per cluster, unless you are modifying the above artifacts or your credentials have expired.
+Predeployment only needs to be done once, unless you are modifying the above artifacts.
 
 ### 2.2.1 Local Mode
 
@@ -93,36 +83,16 @@ etc.
 
 ### Integration Test Prerequisites
 - Check for core [prerequisites](https://github.com/openshift/aws-account-operator/blob/master/docs/1.1-InstallationPrerequisites.md#11---prerequisites).
-- Update AWS credentials using `rh-aws-saml-login`:
-    ```bash
-    ./hack/scripts/update_aws_credentials.sh
+- Environment Variables:-
+    Setup .envrc file in root folder as per [doc](https://github.com/openshift/aws-account-operator/blob/master/docs/1.1-InstallationPrerequisites.md#115-environment-variables),
+    and add below variables to it
     ```
-- Environment Variables:
-    Setup `.envrc` file in root folder as per [documentation](https://github.com/openshift/aws-account-operator/blob/master/docs/1.1-InstallationPrerequisites.md#115-environment-variables).
-    Required variables:
-    ```bash
-    export AWS_PAGER=
-    export FORCE_DEV_MODE=local
-
-    # Your personal account
-    export OSD_STAGING_2_AWS_ACCOUNT_ID=<your-assigned-account-id>
-
-    # Shared team constants (get from team lead/documentation)
-    export OSD_STAGING_1_OU_ROOT_ID=<shared-ou-root-id>
-    export OSD_STAGING_1_OU_BASE_ID=<shared-ou-base-id>
-
-    # STS roles
-    export STS_ROLE_ARN=arn:aws:iam::<YOUR_ACCOUNT_ID>:role/AccessRole
-    export STS_JUMP_ARN=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole
-    export STS_JUMP_ROLE=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole
-    export SUPPORT_JUMP_ROLE=arn:aws:iam::<SHARED_ACCOUNT_ID>:role/JumpRole
-
-    # Optional: For integration tests
-    export OSD_STAGING_1_AWS_ACCOUNT_ID=<SHARED_ACCOUNT_ID>
+    export SUPPORT_JUMP_ROLE=
+    export STS_JUMP_ROLE=
+    export OPERATOR_ACCESS_KEY_ID=
+    export OPERATOR_SECRET_ACCESS_KEY=
     ```
-    **Note**: The OU IDs refer to the shared osd-staging-1 account's organization structure and are the same for all developers. `OSD_STAGING_1_AWS_ACCOUNT_ID` is optional (set to shared account ID for integration tests). `OPERATOR_ACCESS_KEY_ID` and `OPERATOR_SECRET_ACCESS_KEY` are no longer required as environment variables. Credentials are managed via `~/.aws/credentials` file.
-- Ensure command line utilities dependencies **jq**, **awscli**, and **python3** are present.
-- Ensure **rh-aws-saml-login** is installed and configured.
+- Ensure command line utilities dependencies **jq** & **awscli** are present.
 
 ### 2.4.1 Testing on local crc cluster
 - Login to crc cluster as kubeadmin.
